# git-quick

./: .gitignore  LICENSE  README.md  pyproject.toml
git_quick/: __main__.py
