[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "git-quick"
version = "0.1.0"
description = "A command-line tool for fast git add, commit, and push"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }


[project.scripts]
a = "git_quick.__main__:main"