[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "git-fast"
version = "0.1.0"
description = "Quick git add, commit, push in one command"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "OliverIida" }]
requires-python = ">=3.8"

[project.scripts]
a = "git_fast.__main__:main"